--- a/style.css
+++ b/style.css
@@ -141,3 +141,27 @@ header{
     flex-direction: row;
     align-items: center;
 }
+
+@media(min-width:50rem){
+    .info{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .info2{
+        display:flex;
+        flex-direction: column;
+        margin-right:20px;
+    }
+    
+    .button_subs{
+        position: static;
+        margin-left:550px;
+        border:red solid 1px;
+        background: #d72d5c;
+        color: #fff;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px 25px;
+    }
+}
